Adiciona suporte à criptografia de senhas com BCrypt

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <version>3.0.0</version>
         </dependency>
 
+        <!-- Criptografia -->
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
